# mcp-server

./: .gitignore  LICENSE  README.md  config.ini  pyproject.toml  requirements.txt  run.py
app/: __init__.py
app/mcp/: __init__.py  config.py  gateway.py  models.py  router.py  server.py  service_loader.py  service_manager.py  service_registry.py  services_config.py  services_config.yaml  tools.py
app/mcp/services/: __init__.py  base_service.py  example_service.py  gmgn.py  meteora.py
app/mcp/tool_configs/: __init__.py  tool_config.py
app/mcp/tools/: __init__.py  additional_tools.py  alpha_vantage_stocks_tool.py  alpha_vantage_tool.py  (+35 more)
app/templates/: api_docs.html
docs/: AAVE_TOOL.md  COINDESK_TOOL.md  CURRENCY_CONVERTER_TOOL.md  GMAIL_TOOL.md  GMGN_TOOL.md  GOOGLEMAPS_TOOL.md  GOOGLE_CALENDAR_TOOL.md  JIRA_TOOL.md  LUNARCRUSH_TOOL.md  MERKL_TOOL.md  OPENWEATHER_TOOL.md  PUMPFUN_TOOL.md  PUMPNEWS_TOOL.md  REDDIT_TOOL.md  SLACK_TOOL.md  TWITTER_TOOL.md  YOUTUBE_TOOL.md
scripts/: add_service.py  debug_jupiter_api.py  debug_raydium_api.py  test_aave_tool.py  test_all_tools.py  test_coindesk_tool.py  test_currency_converter_tool.py  test_gmail_tool.py  test_gmgn_tool.py  test_google_calendar_tool.py  test_googlemaps_tool.py  test_jira_tool.py  test_jupiter_raydium_tools.py  test_lunarcrush_tool.py  test_merkl_tool.py  test_nft_tool.py  test_openweather_tool.py  test_pumpfun_tool.py  test_pumpnews_tool.py  test_real_data_tools.py  test_reddit_tool.py  test_slack_tool.py  test_tools.py  test_twitter_tool.py  test_youtube_tool.py
templates/: api_docs.html
(+9 files in other folders)
